--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.8.0",
+    "@azure/msal-react": "^1.0.0-alpha.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.3",
+    "msal": "^1.4.4",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
