--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "dotenv": "^8.2.0",
+    "immutability-helper": "^3.1.1",
     "mongodb": "^3.6.3",
     "msal": "^1.4.4",
     "next": "10.0.3",
     "react": "17.0.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.1"
   }
 }
