--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy" : "git add . && git commit -m 'Deploying Build' && git push origin"
   },
   "dependencies": {
     "@azure/msal-browser": "^2.8.0",
     "@azure/msal-react": "^1.0.0-alpha.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "immutability-helper": "^3.1.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.3",
     "msal": "^1.4.4",
     "next": "10.0.3",
