--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "mongodb": "^3.6.3",
     "msal": "^1.4.4",
     "next": "10.0.3",
+    "nextjs": "^0.0.3",
     "react": "17.0.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-google-login": "^5.2.2"
   }
 }
