--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure/msal-react": "^1.0.0-alpha.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.6.2",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
