--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.1",
-    "react-google-login": "^5.2.2"
+    "react-google-login": "^5.2.2",
+    "use-intersection": "^0.2.1"
   }
 }
